# NetCacheManager

./: Cargo.toml  config.toml  config_1.toml  config_2.toml
docs/: EventRelay_Protocol.md  Sync_Protocol.md  TLV_Protocol.md
src/: lib.rs  main.rs
src/cache_handler/: mod.rs  ram_handler.rs  socket_handler.rs  storage_handler.rs
src/config/: config.rs
src/eventrelay/: eventrelay.rs  mod.rs
src/networking/: mod.rs  socket_handler.rs
src/protocol/: tlv.rs
src/replication_layer/: mod.rs  socket_server.rs
src/storage/: mod.rs  ram_handler.rs  storage_handler.rs
tests/: eventrelay_test.rs  performance_test.rs  ramstore_tests.rs  storage_handler_test.rs  tcp_test.rs  unix_test.rs
