[package]
name = "netcache_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
bytes = "1.10.1"
log = "0.4.27"
env_logger = "0.11.8"
lazy_static = "1.5.0"
zstd = "0.13.3"
zstd-safe = "7.2.4"
indexmap = "2.9.0"
dashmap = "6.1.0"
snap = "1"